--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
-<Layout title="Welcome to Astro Updated">
+<Layout title="Welcome to Astro Updated again">
 	<main>
 		<h1>Welcome to <span class="bg-orange-300 text-green-600">Astro</span></h1>
 		<p class="instructions">
