--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,9 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
-<Layout title="Welcome to Astro Updated again">
+<Layout title="Welcome to Astro">
 	<main>
-		<h1>Welcome to <span class="bg-orange-300 text-green-600">Astro</span></h1>
+		<h1>Welcome to <span class="bg-orange-300 text-green-600">Astro Updated</span></h1>
 		<p class="instructions">
 			Check out the <code>src/pages</code> directory to get started.<br/>
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
