--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,12 @@
 ---
 export interface Props {
 	title: string;
+	description: string
 }
+import Nav from '../components/Nav.astro';
+import Footer from '../components/Footer.astro';
+const {title, description } = Astro.props as Props;
 
-const { title } = Astro.props as Props;
 ---
 
 <!DOCTYPE html>
@@ -13,9 +16,12 @@ const { title } = Astro.props as Props;
 	<meta name="viewport" content="width=device-width">
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 	<title>{title}</title>
+	<meta name="description" content={description}>
 </head>
 <body>
+	<Nav></Nav>
 	<slot />
+	<Footer></Footer>
 </body>
 </html>
 
