--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/Layout.astro';
  - professional web design, hosting, development and web application services"
  >
 	<main>
-		<div class="pt-24 gradient">
+		<div class="pt-24 topgradient">
 			<div class="container px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center">
 			  <!--Left Col-->
 			  <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
