--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -27,7 +27,7 @@
         <nav> 
           <ul class="md:flex justify-between md:items-center md:w-auto text-blue-700">
               <li class="relative group">
-                  <a id="dropsub-menu" class="block mt-4 md:inline-flex md:mt-0  hover:text-blue-500 mr-4 relative" href="/services/">Services</a>
+                  <a id="dropsub-menu" class="block mt-4 md:inline-flex md:mt-0  hover:text-blue-500 mr-4 relative" href="#">Services</a>
                   <ul id="" class="md:shadow-lg border border-2 rounded-lg p-2 bg-gray-200 ml-4 md:ml-0 md:absolute top-6 left-0 z-10  block  md:invisible md:group-hover:visible">
                       <li class="block p-2 mb:my-2  hover:text-blue-500 hover:bg-gray-300"><a class="inline-block" href="/services/applications">Applications</a></li>
                       <li class="block p-2 mb:my-2  hover:text-blue-500 hover:bg-gray-300"><a href="/services/design/">Design</a></li>
