--- a/src/components/Headings.astro
+++ b/src/components/Headings.astro
@@ -4,7 +4,7 @@ const {panel_title, page_title, panel_summary, pa_s_jpg, pa_jpg}  = Astro.props;
 
 ---
 
-<div class="w-full max-h-full overflow-hidden relative h-72 gradient">
+<div class="w-full max-h-full overflow-hidden relative h-72 topgradient">
     <div class="w-full absolute top-0 left-0 opacity-75">
         <h1 class="text-center lg:text-2xl bg-gray-800 text-white">{panel_title}</h1>
     </div>
