--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -25,7 +25,7 @@ let year = d.getFullYear();
           <p class="uppercase md:mb-6">Help</p>
           <ul class="list-reset mb-6">
             <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-              <a href="/faq" class="no-underline hover:underline hover:text-pink-500">FAQ</a>
+              <a href="/faqs" class="no-underline hover:underline hover:text-pink-500">FAQ</a>
             </li>
           </ul>
         </div>
