improved layout added svelte

--- a/src/components/Headings.astro
+++ b/src/components/Headings.astro
@@ -33,10 +33,10 @@ const {panel_title, page_title, panel_summary, pa_s_jpg, pa_jpg}  = Astro.props;
             type="image/webp"
             />
             <img
-              class="object-cover w-full"
+              class="w-full h-72"
               src={pa_jpg}
               alt="web design"
-              height="300"
+             
               
             />
           </picture>
