--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,15 @@ const {title, description } = Astro.props as Props;
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 	<title>{title}</title>
 	<meta name="description" content={description}>
+	<link rel="manifest" href="/manifest.webmanifest">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0074ad">
+<meta name="apple-mobile-web-app-title" content="meteor">
+<meta name="application-name" content="meteor">
+<meta name="msapplication-TileColor" content="#ffc40d">
+<meta name="theme-color" content="#663399">
 </head>
 <body>
 	<Nav></Nav>
