--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -258,7 +258,9 @@ import Layout from '../layouts/Layout.astro';
 				</div>
 				<div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
 				  <div class="flex items-center justify-start">
-					<a class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" href="/blog/responsive-design/">
+					<a class="mx-auto lg:mx-0 hover:underline gradient text-black font-bold rounded-full
+					 my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition
+					  hover:scale-105 duration-300 ease-in-out" href="/blog/responsive-design/">
 					  read more..
 					</a>
 				  </div>
