--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,6 +27,7 @@ const {title, description } = Astro.props as Props;
 <meta name="application-name" content="meteor">
 <meta name="msapplication-TileColor" content="#ffc40d">
 <meta name="theme-color" content="#663399">
+<link rel="sitemap" type="application/xml" href="/sitemap.xml">
 </head>
 <body>
 	<Nav></Nav>
