--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Layout from '../layouts/Layout.astro';
 		<div class="pt-24 topgradient">
 			<div class="container px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center">
 			  <!--Left Col-->
-			  <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
+			  <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left text-stone-200">
 				<p class="uppercase tracking-loose w-full">Web Design</p>
 				<h1 class="my-4 text-2xl font-bold leading-tight">
 				  High Performance Fast Loading Websites
@@ -276,13 +276,16 @@ import Layout from '../layouts/Layout.astro';
 					  Easily get indexed
 					</div>
 					<p class="text-gray-800 text-base px-6 mb-5">
-					  Being incorporated in search engine index is vital, allowing your potential customers to find your products. 
+					  Being incorporated in search engine index is vital, allowing your potential customers to find your
+					   products. Static page produce easy to index URL's. 
 					</p>
 				  </a>
 				</div>
 				<div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
 				  <div class="flex items-center justify-center">
-					<a class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" href="/blog/search-engine-indexing">
+					<a class="mx-auto lg:mx-0 hover:underline gradient text-black font-bold rounded-full 
+					my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition
+					 hover:scale-105 duration-300 ease-in-out" href="/blog/search-engine-indexing">
 					  read more..
 					</a>
 				  </div>
@@ -292,21 +295,24 @@ import Layout from '../layouts/Layout.astro';
 				<div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
 				  <a href="#" class="flex flex-wrap no-underline hover:no-underline">
 					<p class="w-full text-gray-600 text-xs md:text-sm px-6">
-					  Clear Readable Text
+					  Fast Load Times
 					</p>
 					<div class="w-full font-bold text-xl text-gray-800 px-6">
-					  Help Your Visitors.
+					  User Friendly
 					</div>
 					<p class="text-gray-800 text-base px-6 mb-5">
-					  Make it easy for peoples to read and understand your project by not putting unnecessary obsticles in the way.
+						Fast load times are not only critical for user experience, but they also have a pretty big impact on
+						 SEO (search engine optimisation).
 					</p>
 				  </a>
 				</div>
 				<div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
 				  <div class="flex items-center justify-end">
-					<button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+					<a class="mx-auto lg:mx-0 hover:underline gradient text-black font-bold rounded-full
+					 my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition
+					  hover:scale-105 duration-300 ease-in-out" href="/blog/web-page-speed">
 					  read more..
-					</button>
+				  </a>
 				  </div>
 				</div>
 			  </div>
