added cors headers in netlify.toml

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Layout from '../layouts/Layout.astro';
  >
 	<main>
 		<div class="pt-24 topgradient">
-			<div class="container px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center">
+			<div class="container px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center text-lg">
 			  <!--Left Col-->
 			  <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left text-stone-200">
 				<p class="uppercase tracking-loose w-full">Web Design</p>
@@ -57,10 +57,10 @@ import Layout from '../layouts/Layout.astro';
 			  <div class="flex flex-wrap">
 				<div class="w-5/6 sm:w-1/2 p-6">
 				  <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-					Jamstack Sites
+					Ultra Fast Sites
 				  </h3>
-				  <p class="text-gray-600 mb-8">
-					Becoming ever more popular because of speed and security so called Jamstack sites. Using precompiled pages rather than server composition produces robust rendering performance while serveless functions allow data processing.
+				  <p class="text-gray-600 mb-8 text-lg">
+					Becoming ever more popular because of speed and security so called <a class="text-blue-600" href="/blog/jamstack">Jamstack</a> sites. Using precompiled pages rather than server composition produces robust rendering performance while serveless functions allow data processing.
 					<br />
 					<br />
 				  </p>
@@ -224,7 +224,7 @@ import Layout from '../layouts/Layout.astro';
 					<h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
 					  Hosting
 					</h3>
-					<p class="text-gray-600 mb-8">
+					<p class="text-gray-600 mb-8 text-lg">
 					  Hosting from World class to hobby class, personal to business. Cost related that suite purpose and budget. 
 					  <br />
 					  <br />
@@ -251,7 +251,7 @@ import Layout from '../layouts/Layout.astro';
 					<div class="w-full font-bold text-xl text-gray-800 px-6">
 					  View on any device
 					</div>
-					<p class="text-gray-800 text-base px-6 mb-5">
+					<p class="text-gray-800 text-lg px-6 mb-5">
 					  Responsive design is the backbone of the modern visible web allowing sites and applications to be rendered on devices with varios screen sizes.
 					</p>
 				  </a>
@@ -275,7 +275,7 @@ import Layout from '../layouts/Layout.astro';
 					<div class="w-full font-bold text-xl text-gray-800 px-6">
 					  Easily get indexed
 					</div>
-					<p class="text-gray-800 text-base px-6 mb-5">
+					<p class="text-gray-800 text-lg px-6 mb-5">
 					  Being incorporated in search engine index is vital, allowing your potential customers to find your
 					   products. Static page produce easy to index URL's. 
 					</p>
@@ -300,7 +300,7 @@ import Layout from '../layouts/Layout.astro';
 					<div class="w-full font-bold text-xl text-gray-800 px-6">
 					  User Friendly
 					</div>
-					<p class="text-gray-800 text-base px-6 mb-5">
+					<p class="text-gray-800 text-lg px-6 mb-5">
 						Fast load times are not only critical for user experience, but they also have a pretty big impact on
 						 SEO (search engine optimisation).
 					</p>
