--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const {title, description } = Astro.props as Props;
 <meta name="theme-color" content="#663399">
 <link rel="sitemap" type="application/xml" href="/sitemap.xml">
 </head>
-<body>
+<body class="container">
 	<Nav></Nav>
 	<slot />
 	<Footer></Footer>
